Finished project added.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 UnityIntroduction/Library/
 UnityIntroduction/obj/
 UnityIntroduction/Temp/
+UnityIntroduction - Finished/Library/
+UnityIntroduction - Finished/obj/
+UnityIntroduction - Finished/temp/
